Added 6 more change notes